Fix titles on mobile view

--- a/templates/Kekeke/src/styles/main.sass
+++ b/templates/Kekeke/src/styles/main.sass
@@ -74,6 +74,9 @@
 		text-transform: uppercase
 		font-family: Kiona, sans-serif
 		color: var(--color-accent)
+		word-wrap: break-word
+		white-space: normal
+		line-height: initial
 
 	h1
 		text-transform: uppercase
